# gpg

./: CMakeLists.txt  CMakeLists_ros.txt  package.xml
include/nodes/: generate_candidates_node.h
launch/: generate_candidates.launch
msg/: CloudIndexed.msg  CloudSamples.msg  GraspConfig.msg  GraspConfigList.msg  PointCloudList.msg  SinglePointCloud.msg
src/: generate_candidates_node.cpp
src/gpg/: candidates_generator.cpp
